--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <button onclick="pizzatime()">Pizza Time!</button>      
       
       <h3 id="result">
+        &nbsp;
       </h3>
 
     </div>
